--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,5 +18,6 @@ jobs:
     with:
       registry-dockerhub-enable: false
       push: ${{ github.event_name != 'pull_request' }}
+      platforms: linux/arm64/v8
     secrets:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
